# piper-voice-clone

./: .gitignore  README.md  config.colab.yaml  config.yaml  pyproject.toml  requirements.txt
colab/: README.md  download_checkpoint.sh  download_dataset.sh  generate_dataset.sh  piper_training_utils.py  piper_voice_clone.ipynb  train_piper.sh
colab/piper_patches/src/piper/train/: __main__.py  colab_callbacks.py  export_onnx.py  export_onnx_phoneme_duration.py
colab/piper_patches/src/piper/train/vits/: dataset.py  lightning.py
install/: _common.sh  install_colab.sh  install_new_gpu.sh  install_old_gpu.sh
references/: README.md
scripts/: apply_piper_patches.py  download_checkpoint.py  download_checkpoint.sh  download_dataset.py  download_dataset.sh  generate_dataset.py  test_piper_voice.py  test_voice.py  train_piper_local.sh
src/voice_cloning/: __init__.py  audio_utils.py  book_loader.py  checkpoint_download.py  cli.py  cli_args.py  config_paths.py  dataset_generator.py  dataset_import.py  faster_qwen3tts_engine.py  hf_utils.py  metadata.py  piper_training.py  qwen3tts_engine.py
